fix text overflow in form multiselects

--- a/app/javascript/components/forms/components/select/styles.scss
+++ b/app/javascript/components/forms/components/select/styles.scss
@@ -15,8 +15,13 @@
     height: rem(100px);
     padding: 0;
 
+
     option {
-      padding: 5px 12px;
+      padding: 6px 12px;
+      height: auto;
+      overflow: hidden;
+      word-wrap: normal !important;
+      white-space: normal;
     }
   }
 }
